objects/BW_RAID_Log__c.object
<CustomObject>
    <fields>
        <fullName>BW_Captured_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Captured By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RAID_Log_Captured_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BW_Captured_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Captured Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BW_Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BW_Closed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RAID_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BW_Comments__c</fullName>
        <label>Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BW_Current_Update__c</fullName>
        <label>Current Update</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BW_Decision_Date__c</fullName>
        <label>Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BW_Decision_Made__c</fullName>
        <label>Decision Made</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BW_Decision_to_be_Made__c</fullName>
        <label>Decision to be Made</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BW_Description__c</fullName>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BW_Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BW_Impact_Description__c</fullName>
        <label>Impact Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BW_Impact_Level__c</fullName>
        <label>Impact Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BW_Impact</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BW_Key_Considerations__c</fullName>
        <label>Key Considerations</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BW_Leadership_Visibility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Leadership Visibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BW_Likelihood__c</fullName>
        <label>Likelihood</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BW_Likelihood</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BW_Mitigation_Plan__c</fullName>
        <label>Mitigation Plan</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BW_Next_Steps__c</fullName>
        <label>Next Steps</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BW_Other_Workstreams_Impacted__c</fullName>
        <label>Other Workstreams Impacted</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BW_Workstreams</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BW_Primary_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RAID_Log_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BW_Resolution_Date__c</fullName>
        <label>Resolution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BW_Risk_Score__c</fullName>
        <formula>VALUE(LEFT(TEXT( BW_Impact_Level__c ),1)) * VALUE(LEFT(TEXT(BW_Likelihood__c),1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BW_Secondary_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Secondary_Action_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BW_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Overdue</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Ready for Approval</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Returned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BW_Workstream_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workstream</label>
        <referenceTo>BW_Workstream__c</referenceTo>
        <relationshipLabel>RAID Logs</relationshipLabel>
        <relationshipName>RAID_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BW_Workstream__c</fullName>
        <label>Workstream</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BW_Workstreams</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>RAID Log</label>
    <listViews>
        <fullName>Action_Items_All_by_Status</fullName>
        <columns>NAME</columns>
        <columns>BW_Description__c</columns>
        <columns>BW_Primary_Owner__c</columns>
        <columns>BW_Due_Date__c</columns>
        <columns>BW_Status__c</columns>
        <columns>BW_Workstream__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>BW_RAID_Log__c.BW_Action_Item</value>
        </filters>
        <filters>
            <field>BW_Status__c</field>
            <operation>equals</operation>
            <value>Not Started,In Progress,Overdue,Completed,On Hold,Withdrawn</value>
        </filters>
        <filters>
            <field>BW_Workstream__c</field>
            <operation>equals</operation>
            <value>Centers,CLM,C360,Engineering,Arch &amp; Int,Program,Retail,RLM</value>
        </filters>
        <label>Action Items - All by Status</label>
    </listViews>
    <listViews>
        <fullName>Action_Items_Open_by_Owner</fullName>
        <columns>NAME</columns>
        <columns>BW_Description__c</columns>
        <columns>BW_Primary_Owner__c</columns>
        <columns>BW_Status__c</columns>
        <columns>BW_Due_Date__c</columns>
        <columns>BW_Workstream__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>BW_RAID_Log__c.BW_Action_Item</value>
        </filters>
        <filters>
            <field>BW_Status__c</field>
            <operation>equals</operation>
            <value>Not Started,In Progress,Overdue</value>
        </filters>
        <filters>
            <field>BW_Workstream__c</field>
            <operation>equals</operation>
            <value>Centers,CLM,C360,Engineering,Arch &amp; Int,Program,Retail,RLM</value>
        </filters>
        <label>Action Items - Open by Owner</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BW_Description__c</columns>
        <columns>BW_Primary_Owner__c</columns>
        <columns>BW_Status__c</columns>
        <columns>BW_Due_Date__c</columns>
        <columns>BW_Workstream__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>BW_RAID_Log__c.BW_Action_Item</value>
        </filters>
        <filters>
            <field>BW_Status__c</field>
            <operation>equals</operation>
            <value>Not Started,In Progress,Overdue</value>
        </filters>
        <filters>
            <field>BW_Workstream__c</field>
            <operation>equals</operation>
            <value>Centers,CLM,C360,Engineering,Arch &amp; Int,Program,Retail,RLM</value>
        </filters>
        <label>Action Items - Open by Workstream</label>
    </listViews>
    <listViews>
        <fullName>BW_Issues</fullName>
        <columns>NAME</columns>
        <columns>BW_Description__c</columns>
        <columns>BW_Primary_Owner__c</columns>
        <columns>BW_Due_Date__c</columns>
        <columns>BW_Status__c</columns>
        <columns>BW_Workstream__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>BW_RAID_Log__c.BW_Issue</value>
        </filters>
        <filters>
            <field>BW_Status__c</field>
            <operation>equals</operation>
            <value>Open,Escalated,Closed</value>
        </filters>
        <filters>
            <field>BW_Workstream__c</field>
            <operation>equals</operation>
            <value>Centers,CLM,C360,Engineering,Arch &amp; Int,Program,Retail,RLM</value>
        </filters>
        <label>Issues - All by Status</label>
    </listViews>
    <listViews>
        <fullName>BW_Risks</fullName>
        <columns>NAME</columns>
        <columns>BW_Description__c</columns>
        <columns>BW_Primary_Owner__c</columns>
        <columns>BW_Impact_Level__c</columns>
        <columns>BW_Likelihood__c</columns>
        <columns>BW_Due_Date__c</columns>
        <columns>BW_Status__c</columns>
        <columns>BW_Workstream__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>BW_RAID_Log__c.BW_Risk</value>
        </filters>
        <filters>
            <field>BW_Status__c</field>
            <operation>equals</operation>
            <value>Open,Escalated,Closed</value>
        </filters>
        <filters>
            <field>BW_Workstream__c</field>
            <operation>equals</operation>
            <value>Centers,CLM,C360,Engineering,Arch &amp; Int,Program,Retail,RLM</value>
        </filters>
        <label>Risks - All by Status</label>
    </listViews>
    <listViews>
        <fullName>Decisions_All_by_Status</fullName>
        <columns>NAME</columns>
        <columns>BW_Description__c</columns>
        <columns>BW_Primary_Owner__c</columns>
        <columns>BW_Due_Date__c</columns>
        <columns>BW_Status__c</columns>
        <columns>BW_Workstream__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>BW_RAID_Log__c.BW_Decision</value>
        </filters>
        <filters>
            <field>BW_Workstream__c</field>
            <operation>equals</operation>
            <value>Centers,CLM,C360,Engineering,Arch &amp; Int,Program,Retail,RLM</value>
        </filters>
        <filters>
            <field>BW_Status__c</field>
            <operation>equals</operation>
            <value>Open,Escalated,Closed</value>
        </filters>
        <label>Decisions - All by Status</label>
    </listViews>
    <listViews>
        <fullName>Decisions_Open_by_Owner</fullName>
        <columns>NAME</columns>
        <columns>BW_Description__c</columns>
        <columns>BW_Primary_Owner__c</columns>
        <columns>BW_Due_Date__c</columns>
        <columns>BW_Status__c</columns>
        <columns>BW_Workstream__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>BW_RAID_Log__c.BW_Decision</value>
        </filters>
        <filters>
            <field>BW_Workstream__c</field>
            <operation>equals</operation>
            <value>Centers,CLM,C360,Engineering,Arch &amp; Int,Program,Retail,RLM</value>
        </filters>
        <filters>
            <field>BW_Status__c</field>
            <operation>equals</operation>
            <value>Open,Escalated</value>
        </filters>
        <label>Decisions - Open by Owner</label>
    </listViews>
    <listViews>
        <fullName>Decisions_Open_by_Workstream</fullName>
        <columns>NAME</columns>
        <columns>BW_Description__c</columns>
        <columns>BW_Primary_Owner__c</columns>
        <columns>BW_Due_Date__c</columns>
        <columns>BW_Status__c</columns>
        <columns>BW_Workstream__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>BW_RAID_Log__c.BW_Decision</value>
        </filters>
        <filters>
            <field>BW_Workstream__c</field>
            <operation>equals</operation>
            <value>Centers,CLM,C360,Engineering,Arch &amp; Int,Program,Retail,RLM</value>
        </filters>
        <filters>
            <field>BW_Status__c</field>
            <operation>equals</operation>
            <value>Open,Escalated</value>
        </filters>
        <label>Decisions - Open by Workstream</label>
    </listViews>
    <listViews>
        <fullName>Issues_Open_by_Owner</fullName>
        <columns>NAME</columns>
        <columns>BW_Description__c</columns>
        <columns>BW_Primary_Owner__c</columns>
        <columns>BW_Status__c</columns>
        <columns>BW_Due_Date__c</columns>
        <columns>BW_Workstream__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>BW_RAID_Log__c.BW_Issue</value>
        </filters>
        <filters>
            <field>BW_Status__c</field>
            <operation>equals</operation>
            <value>Open,Escalated</value>
        </filters>
        <filters>
            <field>BW_Workstream__c</field>
            <operation>equals</operation>
            <value>Centers,CLM,C360,Engineering,Arch &amp; Int,Program,Retail,RLM</value>
        </filters>
        <label>Issues - Open by Owner</label>
    </listViews>
    <listViews>
        <fullName>Issues_Open_by_Workstream</fullName>
        <columns>NAME</columns>
        <columns>BW_Description__c</columns>
        <columns>BW_Primary_Owner__c</columns>
        <columns>BW_Status__c</columns>
        <columns>BW_Due_Date__c</columns>
        <columns>BW_Workstream__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>BW_RAID_Log__c.BW_Issue</value>
        </filters>
        <filters>
            <field>BW_Status__c</field>
            <operation>equals</operation>
            <value>Open,Escalated</value>
        </filters>
        <filters>
            <field>BW_Workstream__c</field>
            <operation>equals</operation>
            <value>Centers,CLM,C360,Engineering,Arch &amp; Int,Program,Retail,RLM</value>
        </filters>
        <label>Issues - Open by Workstream</label>
    </listViews>
    <listViews>
        <fullName>My_RAID_Log</fullName>
        <columns>NAME</columns>
        <columns>BW_Primary_Owner__c</columns>
        <columns>BW_Description__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>BW_Due_Date__c</columns>
        <columns>BW_Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>BW_Status__c</field>
            <operation>equals</operation>
            <value>Not Started,In Progress,Overdue,Open,Escalated</value>
        </filters>
        <label>My RAID Log - Open Items</label>
    </listViews>
    <listViews>
        <fullName>My_RAID_Log_Closed_Items</fullName>
        <columns>NAME</columns>
        <columns>BW_Primary_Owner__c</columns>
        <columns>BW_Description__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>BW_Due_Date__c</columns>
        <columns>BW_Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>BW_Status__c</field>
            <operation>equals</operation>
            <value>Completed,On Hold,Withdrawn,Closed</value>
        </filters>
        <label>My RAID Log - Closed Items</label>
    </listViews>
    <listViews>
        <fullName>Risks_Open_by_Owner</fullName>
        <columns>NAME</columns>
        <columns>BW_Description__c</columns>
        <columns>BW_Primary_Owner__c</columns>
        <columns>BW_Impact_Level__c</columns>
        <columns>BW_Likelihood__c</columns>
        <columns>BW_Due_Date__c</columns>
        <columns>BW_Status__c</columns>
        <columns>BW_Workstream__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>BW_RAID_Log__c.BW_Risk</value>
        </filters>
        <filters>
            <field>BW_Status__c</field>
            <operation>equals</operation>
            <value>Open,Escalated</value>
        </filters>
        <filters>
            <field>BW_Workstream__c</field>
            <operation>equals</operation>
            <value>Centers,CLM,C360,Engineering,Arch &amp; Int,Program,Retail,RLM</value>
        </filters>
        <label>Risks - Open by Owner</label>
    </listViews>
    <listViews>
        <fullName>Risks_Open_by_Workstream</fullName>
        <columns>NAME</columns>
        <columns>BW_Description__c</columns>
        <columns>BW_Primary_Owner__c</columns>
        <columns>BW_Impact_Level__c</columns>
        <columns>BW_Likelihood__c</columns>
        <columns>BW_Due_Date__c</columns>
        <columns>BW_Status__c</columns>
        <columns>BW_Workstream__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>BW_RAID_Log__c.BW_Risk</value>
        </filters>
        <filters>
            <field>BW_Status__c</field>
            <operation>equals</operation>
            <value>Open,Escalated</value>
        </filters>
        <filters>
            <field>BW_Workstream__c</field>
            <operation>equals</operation>
            <value>Centers,CLM,C360,Engineering,Arch &amp; Int,Program,Retail,RLM</value>
        </filters>
        <label>Risks - Open by Workstream</label>
    </listViews>
    <nameField>
        <displayFormat>RAID-{0000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RAID Logs</pluralLabel>
    <recordTypes>
        <fullName>BW_Action_Item</fullName>
        <active>true</active>
        <label>Action Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>BW_Decision</fullName>
        <active>true</active>
        <label>Decision</label>
    </recordTypes>
    <recordTypes>
        <fullName>BW_Issue</fullName>
        <active>true</active>
        <label>Issue</label>
    </recordTypes>
    <recordTypes>
        <fullName>BW_Risk</fullName>
        <active>true</active>
        <label>Risk</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Decision_Date_is_Required</fullName>
        <active>true</active>
        <description>Decision Date is required before submitting for Approval.</description>
        <errorConditionFormula>ISPICKVAL( BW_Status__c, &apos;Ready for Approval&apos;) &amp;&amp; 
RecordType.Name = &apos;Decision&apos; &amp;&amp;
ISBLANK( BW_Decision_Date__c )</errorConditionFormula>
        <errorDisplayField>BW_Decision_Date__c</errorDisplayField>
        <errorMessage>Please enter a Decision Date before submitting for approval.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Description_is_a_Required_Field</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( BW_Description__c )</errorConditionFormula>
        <errorDisplayField>BW_Description__c</errorDisplayField>
        <errorMessage>Please enter a Description</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Due_Date_is_Required</fullName>
        <active>true</active>
        <description>Due Date is a required field for Action Items</description>
        <errorConditionFormula>ISBLANK( BW_Due_Date__c )</errorConditionFormula>
        <errorDisplayField>BW_Due_Date__c</errorDisplayField>
        <errorMessage>Please enter a Due Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Resolution_Date_is_Required</fullName>
        <active>true</active>
        <description>Resolution Date is required if the Status is set to Closed.</description>
        <errorConditionFormula>ISPICKVAL( BW_Status__c, &apos;Closed&apos;) &amp;&amp; 
(RecordType.Name = &apos;Issue&apos; || RecordType.Name = &apos;Risk&apos;) &amp;&amp;
ISBLANK( BW_Resolution_Date__c )</errorConditionFormula>
        <errorDisplayField>BW_Resolution_Date__c</errorDisplayField>
        <errorMessage>Please enter a Resolution Date before closing.</errorMessage>
    </validationRules>
</CustomObject>